# fix overlap issue for header (with calendar)

--- a/www/modules/core/less/_core.header.less
+++ b/www/modules/core/less/_core.header.less
@@ -15,6 +15,7 @@
     left: 0;
     right: 0;
     width: 100%;
+    z-index: 6;
   }
 
   &__main-tab-info {
